--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
   language: python
   python:
     - 3.6
+  install:
+    - pip install readline
+    - pip install colored
   script:
     - pytest
