--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@
   python:
     - 3.6
   install:
+    - pip install pytest pytest-cov
+    - pip install coveralls
     - pip install readline
     - pip install colored
   script:
     - pytest
+  after_success:
+    - coveralls
